...
                        .noRippleClickable {
                            onUndoClicked()
                        }
                        .size(18.dp),
                    tint = MaterialTheme.colorScheme.primary,
                    painter = painterResource(id = R.drawable.baseline_undo_24),
                    contentDescription = "Undo"
                )
                Spacer(modifier = Modifier.size(14.dp))
            }
            Icon(
                modifier = Modifier
                    .noRippleClickable {
                        onSaveEditClicked()
                    }
                    .size(18.dp),
                tint = editColor,
                imageVector = if (isOnEdit) Icons.Filled.Done else Icons.Filled.Edit,
                contentDescription = "Edit Todo"
            )
            Spacer(modifier = Modifier.size(16.dp))
        }

        fun createRoute(todoId: Int) = "home/$todoId"
    }
...
