...
    onNavigationUp: (() -> Unit)? = null,
    isShowTitle: Boolean = true,
    actions: (@Composable () -> Unit)? = null
) {
    val title = when (route) {
        Screen.Home.route -> "Todo App"
        Screen.DetailTodo.route -> "Detail Todo"
        Screen.Profile.route -> "About Me"
        else -> return
    }

    TopAppBar(
        title = { if (isShowTitle) Text(text = title) },
...
