...
        Row(
            modifier = Modifier
                .padding(16.dp)
                .height(IntrinsicSize.Max),
            verticalAlignment = Alignment.CenterVertically
        ) {
            Checkbox(
                modifier = Modifier
                    .size(24.dp)
                    .testTag("Checkbox"),
                checked = isDone,
                onCheckedChange = { onTodoEvent.invoke(TodoEvent.Done(it)) })
            Spacer(modifier = Modifier.size(8.dp))
...
                modifier = Modifier
                    .align(Alignment.Top)
                    .clickable {
                        onTodoEvent.invoke(TodoEvent.Delete)
                    },
                imageVector = Icons.Default.Delete,
                contentDescription = "Delete button",
                tint = deadline.getOnBackgroundColor()
            )
        }

        Row(
            modifier = Modifier
...
