...
                    isShowGroupByAnimation = true
                    onGroupByChanged()
                }
            }
            .rotate(rotation.value),
        imageVector = if (isShowGroupByAnimation) Icons.Filled.Refresh else groupByIcon,
        contentDescription = "Group by",
    )

    AnimatedVisibility(
        enter = slideInHorizontally(
            initialOffsetX = { fullWidth -> fullWidth },
            animationSpec = tween(durationMillis = 250, easing = LinearOutSlowInEasing)
...
